--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </table>
 
     <script>
-        const jsonUrl = './cardapio_sinners_24_09_24.json';
+        const jsonUrl = './cardapio.json';
         async function loadCardapio() {
             try {
                 const response = await fetch(jsonUrl);
